# kaggle_google_ai_agents_data_engineering_capstone_project

./: .env.example  .gitignore  ADK_WEB_USAGE_GUIDE.md  AGENT_CONNECTION_VERIFICATION.md  AGENT_FIX_REPORT.md  DATA_ROBOT_AGENT_COMPLETE.md  EVALUATION_ANALYSIS.md  LEADER_AGENT_CHANGES.md  LICENSE  Makefile  QUICK_START.md  README.md  README_TESTING.md  TESTING_CHECKLIST.md  TESTING_COMPLETE.md  TEST_COMMANDS.sh  TEST_MIGRATION_SUMMARY.md  TEST_REPORT.md  poetry.toml  project_analysis_report.md  pyproject.toml  test_data_robot_api.sh  test_results_api_final.json  validate_agent.py
capstone_project_instructions/: instructions.md
course_notebooks/: ADK_CLI_CLEAN.md  COURSE_REFERENCE_GUIDE.md
src/agents/data_agent/: agent.py  basic_eval_set.evalset.json  test_config.json
src/agents/data_robot_agent/: __init__.py  agent.py  basic_eval_set.evalset.json  capability_checker_agents.py  request_router_agents.py  server.py  test_config.json
src/agents/data_source_agent/: __init__.py  agent.py  agent_with_observability.py  basic_eval_set.evalset.json  server.py  server_with_observability.py
src/agents/ingestion_agent/: __init__.py  agent.py  basic_eval_set.evalset.json  test_config.json
src/agents/multi_agent_explorer/: __init__.py  agent.py  basic_eval_set.evalset.json
src/agents/quality_agent/: __init__.py  agent.py  basic_eval_set.evalset.json
src/agents/sql_agent/: __init__.py  agent.py  basic_eval_set.evalset.json  test_config.json  workflow.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  connection.py  generate_data.py  init_db.py  models.py
src/plugins/: __init__.py  observability.py
src/tests/: __init__.py  test_data_robot_agent.py  test_data_robot_api.py  test_observability.py
src/tools/: __init__.py  data_source_tools.py  exploration_tools.py  ingestion_tools.py  quality_tools.py  query_tools.py
